// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`up.debug = true 1`] = `
[
  "[2024-01-01T00:00:00.000Z] app-compose:",
  "{
  "a": "idle",
  "b": "idle",
  "c": "idle"
}",
]
`;

exports[`up.debug = true 2`] = `
[
  "[2024-01-01T00:00:00.000Z] app-compose:",
  "{
  "a": "pending",
  "b": "idle",
  "c": "idle"
}",
]
`;

exports[`up.debug = true 3`] = `
[
  "[2024-01-01T00:00:00.000Z] app-compose:",
  "{
  "a": "pending",
  "b": "idle",
  "c": "pending"
}",
]
`;

exports[`up.debug = true 4`] = `
[
  "[2024-01-01T00:00:00.000Z] app-compose:",
  "{
  "a": "done",
  "b": "idle",
  "c": "pending"
}",
]
`;

exports[`up.debug = true 5`] = `
[
  "[2024-01-01T00:00:00.000Z] app-compose:",
  "{
  "a": "done",
  "b": "idle",
  "c": "done"
}",
]
`;

exports[`up.debug = true 6`] = `
[
  "[2024-01-01T00:00:00.000Z] app-compose:",
  "{
  "a": "done",
  "b": "off",
  "c": "done"
}",
]
`;
